# computor-v1

./: Cargo.toml  README.md  makefile
.github/workflows/: rust.yml
src/: lib.rs  main.rs  parsing.rs  types.rs
src/operators/: add.rs  div.rs  mod.rs  mul.rs  pow.rs  sub.rs
src/parsing/: lexer.rs  mod.rs
src/types/: expr.rs  factor.rs  group.rs  mod.rs  operators.rs  real.rs  term.rs
src/types/operators/: add.rs  mod.rs  mul.rs  sub.rs
src/types/operators_old/: div.rs  mod.rs  pow.rs
src/types/value/: expr.rs  float.rs  group.rs  mod.rs  real.rs  var.rs
src/types/value/num/: float.rs  mod.rs  real.rs
src/types/value_old/: group.rs  mod.rs
