[package]
name = "computor-v1"
version = "0.1.0"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
libc = "0.2"
lazy_static = "1.4"
phf = { version = "0.8", features = ["macros"] }
regex = "1.3"
log = "0.4"
env_logger = "0.7"
