[package]
name = "computor-v1"
version = "0.1.0"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lcomputor"
path = "src/lib.rs"

[[bin]]
name = "bcomputor"
path = "src/main.rs"

[dependencies]
clap = "2.33"
log = { version = "0.4", features = ["release_max_level_off"] }
env_logger = { version = "0.7", default-features = false }
rustyline = "6.2"
